--- a/client/index.html
+++ b/client/index.html
@@ -216,15 +216,18 @@
     }
 
     /* ---- SCROLLBAR OVERLAY GLASS EFFECT ---- */
+    /* ---- FIXED SCROLLBAR OVERLAY ---- */
+    /* ---- DYNAMIC THEME SCROLLBAR ---- */
     html {
+      /* This ensures content takes full width and scrollbar sits on top */
       overflow-y: overlay;
-      /* Allows scrollbar to sit on top of content without taking space */
+      overflow-x: hidden;
     }
 
     ::-webkit-scrollbar {
       width: 10px;
       background: transparent;
-      /* Transparent track */
+      /* Track is invisible */
     }
 
     ::-webkit-scrollbar-track {
@@ -233,19 +236,28 @@
     }
 
     ::-webkit-scrollbar-thumb {
-      background-color: rgba(var(--primary), 0.5);
-      /* Semi-transparent thumb */
-      /* In Tailwind, primary is var, so we use a hardcoded fallback or JS match. 
-               Using a general transparent color here for glass effect */
-      background-color: rgba(128, 128, 128, 0.3);
+      /* 1. We use the theme variable directly */
+      background-color: var(--primary);
+
+      /* 2. We use a border to 'fake' transparency and spacing */
+      /* This makes the bar look thinner and floating, without needing opacity */
+      border: 3px solid transparent;
       border-radius: 10px;
-      border: 2px solid transparent;
       background-clip: content-box;
-      backdrop-filter: blur(5px);
+
+      /* 3. Smooth transition when theme changes */
+      transition: background-color 0.3s ease;
     }
 
     ::-webkit-scrollbar-thumb:hover {
-      background-color: rgba(128, 128, 128, 0.6);
+      /* On hover, we make it slightly 'thicker' by reducing the border */
+      border: 2px solid transparent;
+    }
+
+    /* Firefox Support (Standard CSS) */
+    html {
+      scrollbar-width: thin;
+      scrollbar-color: var(--primary) transparent;
     }
 
     /* Helpers */
