--- a/client/index.html
+++ b/client/index.html
@@ -149,20 +149,21 @@
     }
 
     /* Animations */
-    @keyframes fadeIn {
+    /* Slide and Zoom Animation */
+   /* Scale and Fade Transition */
+    @keyframes scaleFadeIn {
       from {
         opacity: 0;
-        transform: translateY(20px);
+        transform: scale(0.98); /* Starts slightly smaller */
       }
-
       to {
         opacity: 1;
-        transform: translateY(0);
+        transform: scale(1); /* Grows to full size */
       }
     }
 
     .animate-fade-in {
-      animation: fadeIn 0.8s ease-out forwards;
+      animation: scaleFadeIn 0.5s cubic-bezier(0.25, 1, 0.5, 1) forwards;
     }
 
     @keyframes spin-slow {
@@ -728,6 +729,27 @@
     .idol-glow {
       animation: divine-glow 4s ease-in-out infinite;
       border: 4px solid var(--secondary) !important;
+    }
+
+    /* Advanced View Transition */
+    /* Advanced View Transition - STABLE VERSION */
+    .view-section {
+      opacity: 1;
+      transform: scale(1) translateY(0);
+      transition: opacity 0.5s ease, transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    /* Standard hidden state (Prevents the "Mess") */
+    .view-section.hide {
+      display: none !important;
+    }
+
+    /* Temporary class used during the transition to allow animation */
+    .view-animating {
+      display: block !important;
+      opacity: 0;
+      transform: scale(0.95) translateY(20px);
+      pointer-events: none;
     }
   </style>
 </head>
@@ -3376,31 +3398,29 @@
     }
 
     function switchView(viewId) {
-      // 1. Hide all sections
-      document.querySelectorAll('.view-section').forEach(el => el.classList.add('hide'));
-
-      // 2. Show target section
+      const sections = document.querySelectorAll('.view-section');
       const target = document.getElementById(viewId);
-      if (target) {
-        target.classList.remove('hide');
-      } else {
-        document.getElementById('view-home').classList.remove('hide');
-      }
 
-      // 3. Hide mobile menu
-      document.getElementById('mobile-menu').classList.add('-translate-y-full');
+      if (!target) return;
 
-      // 4. Scroll to top
-      window.scrollTo(0, 0);
+      // 1. Instantly hide all and strip the animation class
+      sections.forEach(el => {
+        el.classList.add('hide');
+        el.classList.remove('animate-fade-in'); 
+      });
 
-      // 5. Update State & Navigation UI
+      // 2. Make the target visible
+      target.classList.remove('hide');
+      
+      // 3. Re-trigger the scale-fade animation
+      void target.offsetWidth; // Force reflow
+      target.classList.add('animate-fade-in');
+
+      // 4. Persistence & Navigation updates
       state.activeView = viewId;
-      renderNavigation();
-      if (viewId === 'view-leela') checkLeelaAccess();
-
-      // --- THE MAGIC LINE ---
-      // Save "view-calendar" to browser memory, NOT the URL bar
       localStorage.setItem('lastView', viewId);
+      renderNavigation();
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 
     // function toggleReadMore(btn) {
