fixed smooth transtion nd scrolling for mobile

--- a/client/index.html
+++ b/client/index.html
@@ -164,6 +164,7 @@
 
     .animate-fade-in {
       animation: scaleFadeIn 0.5s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+      will-change: opacity, transform; /* Pre-optimizes the animation */
     }
 
     @keyframes spin-slow {
@@ -750,6 +751,15 @@
       opacity: 0;
       transform: scale(0.95) translateY(20px);
       pointer-events: none;
+    }
+    /* Add this to your style section */
+    .view-section, .glass-panel, #top-nav {
+      /* Forces GPU rendering */
+      backface-visibility: hidden;
+      perspective: 1000;
+      transform: translateZ(0); 
+      /* Ensures smooth scrolling on iOS */
+      -webkit-overflow-scrolling: touch; 
     }
   </style>
 </head>
