--- a/client/index.html
+++ b/client/index.html
@@ -981,9 +981,9 @@
   </div>
 
   <!-- SETTINGS / ACCESSIBILITY MODAL -->
-  <div id="settings-modal" class="modal-overlay hide animate-fade-in">
+  <div id="settings-modal" class="modal-overlay hide animate-fade-in bg-white/10 backdrop-blur-md">
     <div
-      class="glass-panel w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-2xl p-8 relative bg-white/10 dark:bg-black/40 text-left">
+      class="glass-panel w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-2xl p-8 relative bg-white/70 backdrop-blur-md dark:bg-black/40 text-left">
       <button onclick="toggleSettings()" class="absolute top-4 right-4 text-red-500 hover:text-red-700 transition">
         <i class="fas fa-times text-2xl"></i>
       </button>
