Mandri timing  heading change

--- a/client/index.html
+++ b/client/index.html
@@ -1326,26 +1326,26 @@
                 <div class="text-4xl text-yellow-500 mb-2"><i class="fas fa-sun"></i></div>
                 <h4 class="text-xl font-bold text-secondary mb-4" data-key="timingMorning">प्रातः</h4>
                 <div class="space-y-2 text-sm md:text-base">
-                  <p class="flex justify-between"><span class="opacity-70" data-key="labelOpen">खुलना:</span> <span
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelOpen">पट:</span> <span
                       class="font-bold" id="time-morning-open">5:00 AM</span></p>
                   <p class="flex justify-between"><span class="opacity-70" data-key="labelAarti">आरती:</span> <span
                       class="font-bold" id="time-morning-aarti">6:00 AM</span></p>
-                  <p class="flex justify-between"><span class="opacity-70" data-key="labelClose">बंद:</span> <span
-                      class="font-bold" id="time-morning-close">12:00 PM</span></p>
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelClose">शयन:</span> <span
+                      class="font-bold" id="time-morning-close">8:00 AM</span></p>
                 </div>
               </div>
 
               <!-- Mid-day -->
               <div class="text-center px-4 py-4 md:py-0">
                 <div class="text-4xl text-orange-500 mb-2"><i class="fas fa-cloud-sun"></i></div>
-                <h4 class="text-xl font-bold text-secondary mb-4" data-key="timingMidday">राजभोग</h4>
+                <h4 class="text-xl font-bold text-secondary mb-4" data-key="timingMidday">मध्याह्न</h4>
                 <div class="space-y-2 text-sm md:text-base">
-                  <p class="flex justify-between"><span class="opacity-70" data-key="labelOpen">खुलना:</span> <span
-                      class="font-bold" id="time-mid-open">12:30 PM</span></p>
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelOpen"> पट:</span> <span
+                      class="font-bold" id="time-mid-open">11:00 PM</span></p>
                   <p class="flex justify-between"><span class="opacity-70" data-key="labelBhog">भोग:</span> <span
-                      class="font-bold" id="time-mid-aarti">1:00 PM</span></p>
-                  <p class="flex justify-between"><span class="opacity-70" data-key="labelClose">बंद:</span> <span
-                      class="font-bold" id="time-mid-close">3:00 PM</span></p>
+                      class="font-bold" id="time-mid-aarti">12:00 PM</span></p>
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelClose">शयन:</span> <span
+                      class="font-bold" id="time-mid-close">1:00 PM</span></p>
                 </div>
               </div>
 
@@ -1354,12 +1354,14 @@
                 <div class="text-4xl text-blue-400 mb-2"><i class="fas fa-moon"></i></div>
                 <h4 class="text-xl font-bold text-secondary mb-4" data-key="timingEvening">सायं</h4>
                 <div class="space-y-2 text-sm md:text-base">
-                  <p class="flex justify-between"><span class="opacity-70" data-key="labelOpen">खुलना:</span> <span
-                      class="font-bold" id="time-evening-open">4:00 PM</span></p>
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelOpen">पट:</span> <span
+                      class="font-bold" id="time-evening-open">5:00 PM</span></p>
                   <p class="flex justify-between"><span class="opacity-70" data-key="labelAarti">आरती:</span> <span
-                      class="font-bold" id="time-evening-aarti">7:00 PM</span></p>
-                  <p class="flex justify-between"><span class="opacity-70" data-key="labelClose">बंद:</span> <span
-                      class="font-bold" id="time-evening-close">9:00 PM</span></p>
+                      class="font-bold" id="time-evening-aarti">6:00 PM</span></p>
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelAarti">भोग:</span> <span>
+                  class="font-bold" id="time-evening-aarti">7:00 PM</span></p>
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelClose">शयन:</span> <span
+                      class="font-bold" id="time-evening-close">8:00 PM</span></p>
                 </div>
               </div>
             </div>
@@ -1880,9 +1882,9 @@
             <h3 class="font-bold text-xl text-secondary mb-4" data-key="footerContactTitle">संपर्क करें</h3>
             <div id="footer-contact-info">
               <p class="mb-2"><i class="fas fa-map-marker-alt mr-2 text-primary"></i> <span
-                  data-key="templeNameShort">श्री नृसिंह मंदिर</span></p>
+                  data-key="templeNameShort">श्री नृसिंह बड़ा मंदिर, हसामपुर</span></p>
               <p class="mb-2 pl-6 text-gray-400">Hasampur Village, Rajasthan</p>
-              <p class="mt-4"><i class="fas fa-phone mr-2 text-primary"></i> +91 98765 43210</p>
+              <p class="mt-4"><i class="fas fa-phone mr-2 text-primary"></i> +91 9xxx xxxxx</p>
               <!-- FEATURE: SANKALP BUTTON -->
               <div class="flex gap-2 mt-4">
                 <button onclick="toggleContactModal()"
