Mandir heading  timing changes

--- a/client/index.html
+++ b/client/index.html
@@ -1358,8 +1358,8 @@
                       class="font-bold" id="time-evening-open">5:00 PM</span></p>
                   <p class="flex justify-between"><span class="opacity-70" data-key="labelAarti">आरती:</span> <span
                       class="font-bold" id="time-evening-aarti">6:00 PM</span></p>
-                  <p class="flex justify-between"><span class="opacity-70" data-key="labelAarti">भोग:</span> <span>
-                  class="font-bold" id="time-evening-aarti">7:00 PM</span></p>
+                  <p class="flex justify-between"><span class="opacity-70" data-key="labelAarti">भोग:</span> <span
+                      class="font-bold" id="time-evening-aarti">7:00 PM</span></p>
                   <p class="flex justify-between"><span class="opacity-70" data-key="labelClose">शयन:</span> <span
                       class="font-bold" id="time-evening-close">8:00 PM</span></p>
                 </div>
