--- a/client/index.html
+++ b/client/index.html
@@ -1958,9 +1958,9 @@
 
     <!-- FOOTER -->
     <footer
-      class="bg-gray-900 text-white pt-16 pb-24 lg:pb-8 border-t-4 border-secondary mt-auto relative z-10 transition-all"
+      class="bg-gray-900 text-white pt-10 pb-10 lg:pb-8 border-t-4 border-secondary mt-auto relative z-10 transition-all"
       id="main-footer">
-      <div class="container mx-auto px-4">
+      <div class="container mx-auto px-0">
         <div class="grid md:grid-cols-3 gap-8 mb-8">
           <div>
             <h3 class="font-bold text-xl text-secondary mb-4" data-key="footerContactTitle">संपर्क करें</h3>
@@ -1998,17 +1998,17 @@
               Live Devotees: <span id="visitor-count">108</span>
             </div>
           </div>
-          <div>
+          <!-- <div>
             <h3 class="font-bold text-xl text-secondary mb-4" data-key="footerLocationTitle">स्थान और लिंक
-            </h3>
-            <div class="rounded-lg overflow-hidden border border-gray-700 h-32 mb-4 bg-gray-800 relative">
+            </h3> -->
+            <!-- <div class="rounded-lg overflow-hidden border border-gray-700 h-40 mb-0 bg-gray-800 relative"> -->
               <!-- <iframe id="footer-map-frame" -->
-              <iframe
+              <!-- <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3700.651007515507!2d76.02246477554449!3d27.761745923089823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396d39db0417f251%3A0x1e678e4f685694d2!2sNarsingh%20Ji%20Bada%20Mandir!5e1!3m2!1sen!2sin!4v1768476864682!5m2!1sen!2sin"
                 width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-          </div>
+            </div> -->
+          <!-- </div> -->
         </div>
         <div class="border-t border-gray-800 pt-8 text-center text-sm text-gray-500">
           <p>&copy; 2026 Sri Narsimha Temple Trust.</p>
